--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
             android:layout_margin="8dp"
             android:text="POSTMap"/>
         <Button
+            android:id="@+id/btn_post3"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:text="PostJson"/>
+        <Button
             android:id="@+id/btn_parse"
             android:layout_width="match_parent"
             android:layout_height="60dp"
