增加界面销毁自动取消网络请求功能，防止内存泄漏。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,12 @@
             android:layout_margin="8dp"
             android:text="自定义加载框"/>
 
-
+        <Button
+            android:id="@+id/btn_auto_cancel_task"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="8dp"
+            android:text="自动取消正在执行的任务"/>
     </LinearLayout>
 
 </ScrollView>
